ecmascript/parser/tests/test262-error-references/fail/b508d676bbb2b2af.js.stderr
error: Unexpected token Some(Dot)
 --> $DIR/tests/test262-parser/fail/b508d676bbb2b2af.js:1:14
  |
1 | (function ([a.b]) {})
  |              ^

